make login stack on small screen have fixed height

--- a/src/components/Login/LoginScreen.css
+++ b/src/components/Login/LoginScreen.css
@@ -7,6 +7,7 @@
 
 .select-provider-stack {
   width: 250px;
+  height: 650px;
 }
 
 .select-provider-card {
